Auto download pack
Signed-off-by: Javier Romero <jromero@pivotal.io>

--- a/apps/kotlin-gradle/src/main/resources/templates/index.html
+++ b/apps/kotlin-gradle/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Buildpacks.io Java Sample</title>
+    <title>Buildpacks.io Kotlin Gradle Sample</title>
     <link rel="icon" type="image/png" href="/favicon.png">
     <style>
         html, body {
